RESOLVED FIXED52730
Crash in WebDatabaseManagerProxy::getDatabaseOrigins when called after the WebProcess has died at least once
https://bugs.webkit.org/show_bug.cgi?id=52730
Summary Crash in WebDatabaseManagerProxy::getDatabaseOrigins when called after the We...
Jessie Berlin
Reported 2011-01-19 11:46:53 PST
ASSERTION failure in WebDatabaseManagerProxy::getDatabaseOrigins when called after the WebProcess has died at least once
Attachments
Patch (7.00 KB, patch)
2011-01-19 12:01 PST, Jessie Berlin
no flags
Jessie Berlin
Comment 1 2011-01-19 11:49:46 PST
Correction, it is a crash and not an ASSERTION failure.
Jessie Berlin
Comment 2 2011-01-19 12:01:24 PST
Jessie Berlin
Comment 3 2011-01-19 12:02:01 PST
Jessie Berlin
Comment 4 2011-01-19 14:27:47 PST
Note You need to log in before you can comment on or make changes to this bug.